# TestWork

./: .gitignore  LICENSE  README.md  bitcoin_usd.py  chat_bot.py  count_dots.ipynb  crawling_emails.py  multiplication_tables.py  parse_file.py  test.py  three_most_popular_words_in_text.py  wc.py  word_to_number.py
CompetitiveProgramming/: README.md
CompetitiveProgramming/AdventOfCode/: README.md
CompetitiveProgramming/AtCoder/: README.md
CompetitiveProgramming/CodeWars/: README.md  vowel_remover.py
CompetitiveProgramming/CodingBat/: README.md
CompetitiveProgramming/HackerRank/: README.md
CompetitiveProgramming/LeetCode/: README.md
ComputerVision/visionero/: README.md
DataEngineering/Leads/: gold-data.csv  pyproject.toml  Тестовое_задание_Data_Engineering_с_Prefect_3_0.txt
DataEngineering/Leads/app/: main.py
DataEngineering/Leads/app/data/: stock-data.csv
DataEngineering/Leads/backend/: main.py
Development/: chat_bot.py  only_words_by_order.py
Development/AprBot/: count_of_the_value_permutations.py
LearningResources/: README.md
MiddlePythonDeveloper/: imot-io.py
MiddlePythonDeveloper/AprBot/: num_and_propn_tokens_to_table.py  scripts_runner.sh
MiddlePythonDeveloper/BeeJee/: README.md
MiddlePythonDeveloper/KrakenPublicAPI/: README.md
MiddlePythonDeveloper/SkyTrack/: README.md
ProjectsAndScripts/: bitcoin_usd.py  filter_duplicates.py
ProjectsAndScripts/ColoredLog/: README.md  main.py
ProjectsAndScripts/CountDotsInPic/: README.md  count_dots.ipynb  count_dots.py
ProjectsAndScripts/FilterDuplicates/: README.md
ProjectsAndScripts/FindMaxZeros/: README.md  find_max_zeros.py
ProjectsAndScripts/ImotIO/: README.md
ProjectsAndScripts/MostPopularWordsInText/: README.md  main.py  pyproject.toml
ProjectsAndScripts/OracleStat/: README.md  main.py  pyproject.toml  tests.py
ProjectsAndScripts/OracleStat/data/: TestTask.txt
ProjectsAndScripts/Personal/: README.md
ProjectsAndScripts/Personal/MultiplicationTable/: README.md  main.py  pyproject.toml
ProjectsAndScripts/Personal/nhk.or.jp/: README.md  pyproject.toml
ProjectsAndScripts/PersonalProjects/: README.md
ProjectsAndScripts/WebContentWithSocket/: README.md  main.py  pyproject.toml
ProjectsAndScripts/WordCounter/: README.md  wc.py
ProjectsAndScripts/ZARMA/: README.md  main.py
Web/SkyTrack/: run.py
WebDevelopment/BeeJee/: index.html
WebDevelopment/CREOS-Play/: README.md
WebDevelopment/IP-VEA/: README.md  docker-compose.yml
WebDevelopment/IP-VEA/src/bot/: Dockerfile  main.py  pyproject.toml
WebDevelopment/IP-VEA/src/web/: Dockerfile  main.py  pyproject.toml
WebDevelopment/KrakenPublicAPI/: README.md
WebDevelopment/MVPProject/: README.md  Task.txt  docker-compose.yml  main.py  pyproject.toml
WebDevelopment/MVPProject/data/: ProjectStructure.drawio
WebDevelopment/MVPProject/secret/: .env-backend  .env-postgresql
WebDevelopment/MVPProject/src/: config.py  database.py  lifespan.py  main.py
WebDevelopment/MVPProject/src/resume/: crud.py  enums.py  models.py  router.py  schemas.py  utils.py
WebDevelopment/MindFusion/: README.md
WebDevelopment/Nebus/: Dockerfile  TODO  main.py  requirements.txt
WebDevelopment/SMIT.studio/: .dockerignore  .gitignore  Dockerfile  README.Docker.md  README.md  docker-compose.yml  pyproject.toml
WebDevelopment/SMIT.studio/data/: TestTaskUpdates.txt
WebDevelopment/SMIT.studio/src/: app.py  utils.py
WebDevelopment/SMIT.studio/src/core/: config.py  dependencies.py  lifespan.py  schemas.py
WebDevelopment/SMIT.studio/src/database/: app.py  crud.py  models.py
WebDevelopment/SMIT.studio/src/logging/: app.py  kafka.py
WebDevelopment/SMIT.studio/test/: test_app.py
WebDevelopment/SMIT.studio/tests/: conftest.py  test_app.py
WebDevelopment/TestWork005/: .gitignore  README.md  docker-compose.yml  requirements.txt  run_analysis.py  run_restapi.py
WebDevelopment/VisionLabs/: README.md
WebDevelopment/ZMTeam/: README.md  docker-compose.yml
WebDevelopment/ZMTeam/backend/: .env  Dockerfile  main.py  pyproject.toml
WebDevelopment/ZMTeam/backend/src/: main.py
WebDevelopment/ZMTeam/backend/src/core/: config.py  dependencies.py
WebDevelopment/ZMTeam/backend/src/endpoints/: main.py
WebDevelopment/ZMTeam/backend/src/endpoints/tasks/: crud.py  models.py  router.py  schemas.py
WebDevelopment/ZMTeam/backend/src/sql/: db.py
WebDevelopment/bewise.ai/: README.md  docker-compose.yml  requirements.txt
_howto/README/: README.md
_templates/: README.md
_tools/: README.md
(+188 files in other folders)
