[tool.poetry]
name = "oraclestat"
version = "0.1.0"
description = ""
authors = ["YóUnǎi <c0d3r.nodiru.gaji@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11"
pytest = "^8.3.3"
coverage = "^7.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
