[tool.poetry]
name = "mvpproject"
version = "0.1.0"
description = ""
authors = ["YóUnǎi <c0d3r.nodiru.gaji@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "<4,>=3.11"
sqlalchemy = "^2.0.35"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
python-multipart = "^0.0.12"
pydantic-settings = "^2.5.2"
psycopg2-binary = "^2.9.9"
fastapi-pagination = "^0.12.29"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
