[tool.poetry]
name = "nhk-or-jp"
version = "0.1.0"
description = ""
authors = ["YóUnǎi <c0d3r.nodiru.gaji@gmail.com>"]
readme = "README.md"
packages = [{include = "nhk"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
bs4 = "^0.0.2"
wget = "^3.2"
lxml = "^5.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
