[tool.poetry]
name = "ip-vea"
version = "0.1.0"
description = "Mini Messages"
authors = ["Yóunǎi <c0d3r.nodiru.gaji@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = {extras = ["standard"], version = "^0.112.0"}
motor = "^3.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
